--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "clui-live": "^0.3.2",
+    "data-semaphore": "^0.3.10",
     "data-stopwatch": "^0.1.0",
     "date-fns": "^1.30.1",
     "make-dir": "^2.0.0",
